--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "classnames": "2.3.2",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "gridstack": "8.1.0",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
