--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "5.11.10",
     "@next/font": "13.1.6",
     "@storybook/react": "6.5.16",
+    "@types/gridstack": "0.5.2",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
