--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@mui/material": "5.11.10",
     "@next/font": "13.1.6",
     "@storybook/react": "6.5.16",
+    "@types/gridstack": "0.5.2",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "classnames": "2.3.2",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "gridstack": "8.1.0",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
