--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-next": "13.1.6",
     "gridstack": "8.1.0",
     "next": "13.1.6",
+    "next-transpile-modules": "10.0.0",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
