--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "5.11.10",
     "@next/font": "13.1.6",
     "@storybook/react": "6.5.16",
+    "@supabase/supabase-js": "2.21.0",
     "@types/gridstack": "0.5.2",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
@@ -28,6 +29,7 @@
     "eslint-config-next": "13.1.6",
     "gridstack": "8.1.0",
     "next": "13.1.6",
+    "next-transpile-modules": "10.0.0",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
