--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next-transpile-modules": "10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "14.2.3",
     "typescript": "4.9.5"
   },
   "devDependencies": {
